src/index.css
/* $base-green: #92E3A9;
$base-dark: #263238; */

/* FONTS */
@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap');

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* ??  */
a:link, a:hover, a:visited, a:active {
  text-decoration: none !important;
}

svg{
  max-width: 100%;
}

/* ?? */
.nav-link { 
  text-decoration: none !important;
}

.btn-dark a {
  font-family: 'Merriweather', serif;
  color: #92E3A9 !important;
  font-size: 16px !important;
  font-weight: 700 !important; 
  font-style: normal !important;
  text-decoration: none ;
}

.btn-link a {
  font-family: 'Merriweather', serif;
  color: #263238 !important;
  font-size: 16px;
  font-weight: 300;
}

.btn-primary.custom-btn-1 {
	background-color: #263238 !important;
  border-color: #263238 !important;
  color: #92E3A9; 
  font-family: 'Merriweather', serif;
  font-size: 16px !important;
  font-weight: 700 !important; 
  font-style: normal !important;
  text-decoration: none ;
  line-height: 20.11px;
}

.btn-primary.custom-btn-2 {
	background-color:  #92E3A9!important;
  border-color: #92E3A9 !important;
  color: #263238;
  font-family: 'Merriweather', serif;
  font-size: 16px !important;
  font-weight: 700 !important; 
  font-style: normal !important;
  text-decoration: none ;
  line-height: 20.11px;
}

.first-row {
  font-family: 'Merriweather', serif;
  color: #263238 !important;
  font-size: 40px !important;
  font-weight: 900 !important; 
  font-style: normal !important;
  text-decoration: none ;
  line-height: 48.44px;
}

.second-row, .form-text-2 {
  font-family: 'Roboto', sans-serif;
  color: #263238 !important;
  font-size: 16px !important;
  font-weight: 300 !important; 
  font-style: normal !important;
  text-decoration: none ;
  line-height: 18.75px;
}

.jumbotron {
  background-color: #92E3A9 !important;
}

.main-2-header {
  font-family: 'Merriweather', serif;
  color: #263238 !important;
  font-size: 40px !important;
  font-weight: 900 !important; 
  font-style: normal !important;
  text-decoration: none ;
  line-height: 48.44px;
}

.main-2-col{
  font-family: 'Roboto', sans-serif;
  color: #263238 !important;
  font-size: 16px !important;
  font-weight: 300 !important; 
  font-style: normal !important;
  text-decoration: none ;
  line-height: 18.75px;
}

.form-text-1 {
  font-family: 'Merriweather', serif;
  color: #263238 !important;
  font-size: 29px !important;
  font-weight: 700 !important; 
  font-style: normal !important;
  text-decoration: none ;
  line-height: 35.12px;
}

label {
  font-family: 'Merriweather', serif;
  color: #263238 !important;
  font-size: 16px !important;
  font-weight: 700 !important; 
  font-style: normal !important;
  text-decoration: none ;
  line-height: 35.12px;
}

.box {
  border-radius: 5px;
}

.form-container {
  width: 878px;
}

.footer {
  background-color: #263238;
  color: white;
  height: 75px;
}

.popup-header {
  background-color: #92E3A9; 
  font-family: 'Merriweather', serif;
  color: #263238 !important;
  font-size: 16px !important;
  font-weight: 700 !important; 
  font-style: normal !important;
  text-decoration: none ;
  line-height: 20.11px;
}

.popup-header2 {
  background-color: #92E3A9; 
  font-family: 'Merriweather', serif;
  color: #263238 !important;
  font-size: 16px !important;
  font-weight: 700 !important; 
  font-style: normal !important;
  text-decoration: none ;
  line-height: 20.11px;
  width: 100%; 
  padding: 0;
}

.titlu-plangere {
  font-family: 'Roboto', sans-serif;
  color: #263238 !important;
  font-size: 16px !important;
  font-weight: 700 !important; 
  font-style: normal !important;
  line-height: 18.75px;
}

.materie {
  font-family: 'Roboto', sans-serif;
  color: #92E3A9 !important;
  font-size: 16px !important;
  font-weight: 700 !important; 
  font-style: normal !important;
  line-height: 18.75px;
}

